Change pandas version to larger than 1.4.4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "radarplt"
-version = "2.2.1"
+version = "2.2.2"
 description = ""
 authors = ["jdkern11 <josephdanielkern@gmail.com>"]
 readme = "README.md"
@@ -9,7 +9,7 @@ repository = "https://github.com/jdkern11/radar_plot.git"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-pandas = "^1.4.4"
+pandas = ">=1.4.4"
 matplotlib = "^3.6.3"
 
 [tool.poetry.group.dev.dependencies]
